fix: Align title to centre of device

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -34,6 +34,7 @@ section {
     background-color: #25252573;
     border-radius: 5px;
     margin: 10px;
+    text-align: center;
 }
 
 .table-container {
@@ -116,6 +117,12 @@ h1 {
 #menu li {
     margin-bottom: 1em;
 
+}
+
+.title {
+    
+    display: inline-block;
+    margin-left: 50%;
 }
 
 /* Navbar styles with dropdown toggle */
